--- a/githubviz/.gitignore
+++ b/githubviz/.gitignore
@@ -1,6 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+.DS_Store
+.vscode
+.next/
+
 /node_modules
 /.pnp
 .pnp.js
