--- a/githubviz/package.json
+++ b/githubviz/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^3.6.2",
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
