--- a/githubviz/package.json
+++ b/githubviz/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "chart.js": "^2.9.4",
+    "gh-polyglot": "^2.3.3",
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
