changed deployment target url

--- a/sample-app/vercel.json
+++ b/sample-app/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "name": "sample-app",
-    "alias" : "sample-app",
+    "alias" : "github-dataviz",
     "builds": [
         {
             "src": "package.json",
