--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -8,19 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.4.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "autoprefixer": "^10.4.0",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7"
+    "eslint-config-next": "12.0.7"
   }
 }
