--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -23,6 +23,8 @@
     "autoprefixer": "^10.4.0",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "feather-icons": "^4.28.0",
+    "react-feather": "^2.0.9"
   }
 }
