--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2",
     "react-particles-js": "^3.6.0",
     "react-redux": "^7.2.6",
+    "recharts": "^2.1.8",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
