--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -12,8 +12,8 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-particles-js": "^3.6.0",
     "react-redux": "^7.2.6",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.1.8",
     "styled-components": "^5.3.3"
   },
